# synaptic-siphon

./: .gitignore  README.md  config.toml  pyproject.toml
src/synaptic_siphon/: __init__.py  audio.py  config.py  effects.py  generator.py  recorder.py
tests/: test_generator.py
